# ARGUS-Anchored-Random-Geometric-Unbiased-Storage

./: .dockerignore  .gitignore  Dockerfile.vanilla  Dockerfile.vllm  LICENSE  README.md  README_TR.md  argus_vllm_models.py  demo_train_and_generate.py  docker-compose.yml  pyproject.toml  setup.py
argus_cache/: __init__.py
argus_cache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
argus_cache/core/: __init__.py  memory_manager.py  quantization.py  triton_kernels.py
argus_cache/models/: __init__.py  attention_wrapper.py
benchmarks/: benchmark_suite.py  capacity_eval.py  compare_api_speed.py  empirical_comparison.py  generate_vram_graph.py  llama_real_test.py  locality_results.json  locality_reuse.py  reconstruction_fidelity.py  reconstruction_results.json  retrieval_eval.py  run_telemetry.py  run_ui.py  test_results.json  ui.html  vllm_speed_test.py  vram_profiler.py
core/: dashboard.py  memory_manager.py  quantization.py  triton_kernels.py
docs/: architecture.md
models/: attention_wrapper.py
tests/: test_compression_loss.py  test_kv_cache.py  test_memory_intelligence.py  test_paper_grade_benchmarks.py  test_quantization.py
